fix: layout shift

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -87,6 +87,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    scrollbar-gutter: stable;
   }
   html {
     @apply font-sans;
